syntax = "proto3";

package v1.auth;

option go_package = "github.com/hinccvi/go-ddd/proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginReply) {}
  rpc Refresh (RefreshRequest) returns (RefreshReply) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshReply {
  string access_token = 1;
}
